# android-ad-scanner

./: .gitignore  CHANGELOG.md  README.md  adb_automation_tool.py  adb_automation_tool.spec  pyproject.toml  requirements.txt  smart_intel_scan.py
.github/workflows/: ci.yml  release.yml
config/: detection_rules.json  intel_iocs.json
data/virexa-armeabi_v7a/: AndroidManifest.xml
data/virexa-base/: AndroidManifest.xml  firebase-analytics-ktx.properties  resources.arsc
data/virexa-base/assets/: Battery.json  Check OK.json  Cleaning excess data.json  Green Energy.json  Mobile Search.json  Scan1.json  amjf.txt  budn.txt  cmajd.txt  dijhj.txt  ekskf.txt
data/virexa-base/assets/dexopt/: baseline.prof  baseline.profm
data/virexa-base/res/anim-v21/: m3_side_sheet_enter_from_left.xml  m3_side_sheet_enter_from_right.xml  m3_side_sheet_exit_to_left.xml  m3_side_sheet_exit_to_right.xml
data/virexa-base/res/animator-v21/: design_appbar_state_list_animator.xml  m3_appbar_state_list_animator.xml
data/virexa-base/res/color/: enbale_tint.xml  (+173 more)
data/virexa-es/: AndroidManifest.xml  resources.arsc
data/virexa-xhdpi/: AndroidManifest.xml  resources.arsc
intelligence/: __init__.py  anomaly.py  apk_artifact.py  attack_mapping.py  campaigns.py  intel_db.py  ml_model.py  models.py  pipeline.py  risk_engine.py  stixlite.py
scripts/: build-exe.ps1  build-exe.sh  qa-release-tag.sh  release-tag.ps1  release-tag.sh  run-app.ps1  run-app.sh
tests/: test_adb_tool_helpers.py  test_attack_and_stix.py  test_campaign_dashboard.py  test_intelligence_layers.py  test_ml_and_apk.py
(+560 files in other folders)
